# consoleTVGame

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  local.properties  settings.gradle
.github/workflows/: build.yml
console/: build.gradle.kts  proguard-rules.pro
console/src/main/: AndroidManifest.xml
console/src/main/cpp/: CMakeLists.txt  audio_driver.cpp  input_driver.cpp  retro_frontend.cpp  retro_frontend.h  video_driver.cpp
console/src/main/java/com/retrogamestick/console/: MainActivity.kt  RetroGameStickApplication.kt
console/src/main/java/com/retrogamestick/console/audio/: AudioDriver.kt
console/src/main/java/com/retrogamestick/console/emulator/: EmulatorManager.kt  LibretroBridge.kt
console/src/main/java/com/retrogamestick/console/network/: ConsoleNetworkManager.kt
console/src/main/java/com/retrogamestick/console/video/: VideoDriver.kt
console/src/main/res/drawable/: banner.xml
console/src/main/res/mipmap-hdpi/: ic_launcher.xml
console/src/main/res/values/: colors.xml  themes.xml
controller/: build.gradle.kts
controller/src/main/: AndroidManifest.xml
controller/src/main/java/com/retrogamestick/controller/: MainActivity.kt  RetroGameStickControllerApplication.kt
controller/src/main/java/com/retrogamestick/controller/network/: ControllerNetworkManager.kt
controller/src/main/proto/: network.proto
controller/src/main/res/values/: colors.xml  themes.xml
shared/: build.gradle
shared/src/main/java/retro/gamestick/network/: InputFrame.kt
shared/src/main/proto/: network.proto
